[package]
name = "tcore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
atoi = "2.0.0"
bytes = "1.11.0"
dhat = "0.3"
reqwest = { version = "0.13.1", features = ["query"] }
serde = "1.0.228"
sha1 = "0.10.6"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"]}

[profile.release]
debug = true

[dev-dependencies]
dhat = { version = "0.3"}

[features]
dhat-heap = []    # if you are doing heap profiling

[[bin]]
name = "bench_bencode"
path = "src/bin/bench_bencode.rs"

